--- a/src/Index.html
+++ b/src/Index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <base target="_top">
-    <title>Learning Evidence Analyzer</title>
+    <title>ReVisor</title>
     <?!= include('Stylesheet'); ?>
   </head>
   <body>
     <div class="app-container">
       <header class="app-header">
-        <h1>Learning Evidence Analyzer</h1>
+        <h1>ReVisor</h1>
         <div class="header-controls">
           <button id="folder-picker-btn" class="btn primary">Select Folder</button>
           <input type="text" id="doc-id-input" placeholder="Or paste Doc ID directly..." />
