--- a/src/Stylesheet.html
+++ b/src/Stylesheet.html
@@ -10,155 +10,217 @@
   --ops-bg: #f2f2f3;            /* Lightest Gray */
   --ops-font: 'Lexend', sans-serif;
 
-  /* UI Helpers */
+  /* Studio Theme */
+  --primary-color: var(--ops-primary);
+  --bg-color: var(--ops-bg);
   --panel-bg: #ffffff;
   --border-color: #dadce0;
-  --success-color: #1e8e3e;
+  --text-main: #202124;
+  --text-secondary: #5f6368;
+  --sidebar-width: 350px;
+  --header-height: 60px;
+  --footer-height: 80px;
 }
+
+* { box-sizing: border-box; }
 
 body {
   font-family: var(--ops-font);
   margin: 0;
   padding: 0;
-  background-color: var(--ops-bg);
-  color: #202124;
+  background-color: var(--bg-color);
+  color: var(--text-main);
   height: 100vh;
-  display: flex;
-  flex-direction: column;
+  overflow: hidden;
 }
 
-.app-container {
+/* Layout Containers */
+.app-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
-/* Header */
 .app-header {
+  height: var(--header-height);
   background: white;
   border-bottom: 1px solid var(--border-color);
-  padding: 1rem 2rem;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding: 0 1.5rem;
+  justify-content: space-between;
+  z-index: 10;
 }
 
-.app-header h1 {
-  margin: 0;
-  font-size: 1.25rem;
-  color: var(--ops-primary);
-}
-
-.header-controls {
+.main-container {
   display: flex;
-  gap: 1rem;
+  flex: 1;
+  overflow: hidden;
 }
 
-/* Buttons */
+/* Sidebar */
+.sidebar {
+  width: var(--sidebar-width);
+  background: white;
+  border-right: 1px solid var(--border-color);
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.sidebar-section {
+  padding: 1rem;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.sidebar h3 {
+  margin: 0 0 0.75rem 0;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  color: var(--text-secondary);
+  letter-spacing: 0.5px;
+}
+
+/* Editor Stage */
+.stage {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  background: #f8f9fa;
+  position: relative;
+}
+
+.document-scroller {
+  flex: 1;
+  overflow-y: auto;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.paper {
+  background: white;
+  width: 100%;
+  max-width: 850px;
+  min-height: 1000px;
+  padding: 4rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  font-family: 'Georgia', serif;
+  line-height: 1.6;
+  white-space: pre-wrap;
+  font-size: 16px;
+}
+
+/* Controls Footer */
+.playback-bar {
+  height: var(--footer-height);
+  background: white;
+  border-top: 1px solid var(--border-color);
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
+  gap: 1.5rem;
+}
+
+/* UI Elements */
 .btn {
   padding: 8px 16px;
   border-radius: 4px;
-  border: none;
-  font-weight: 500;
+  border: 1px solid var(--border-color);
+  background: white;
   cursor: pointer;
   font-family: inherit;
+  font-weight: 500;
   transition: background-color 0.2s;
 }
 
 .btn.primary {
   background-color: var(--ops-primary);
   color: white;
+  border: none;
 }
 
 .btn.primary:hover {
   background-color: var(--ops-primary-dark);
 }
 
-.btn.secondary {
-  background-color: white;
-  border: 1px solid var(--ops-primary);
-  color: var(--ops-primary);
-}
-
-.btn.secondary:hover {
-  background-color: #f0f4ff;
-}
-
-input[type="text"] {
-  padding: 8px;
+#rubric-input {
+  width: 100%;
+  height: 100px;
+  margin-top: 0.5rem;
   border: 1px solid var(--border-color);
   border-radius: 4px;
-  width: 250px;
+  padding: 8px;
+  font-size: 0.85rem;
   font-family: inherit;
 }
 
-/* Dashboard Layout */
-.dashboard {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  overflow: hidden;
-}
-
-.status-bar {
-  margin-bottom: 1rem;
-  font-size: 0.9rem;
-  color: #5f6368;
-  min-height: 1.5em;
-}
-
-.status-bar.error {
-  color: var(--ops-red);
-  background-color: var(--ops-red-light);
-  padding: 0.5rem;
+.revision-item {
+  padding: 10px;
   border-radius: 4px;
+  margin-bottom: 4px;
+  cursor: pointer;
+  font-size: 0.85rem;
+  border-left: 3px solid transparent;
 }
 
-.status-bar.success {
-  color: var(--success-color);
+.revision-item:hover { background: #f1f3f4; }
+.revision-item.active { 
+  background: #e8f0fe; 
+  border-left-color: var(--primary-color); 
 }
 
-.status-bar.loading {
-  color: var(--ops-primary);
-  font-style: italic;
+.revision-item.cached::after {
+  content: ' •';
+  color: #34a853;
 }
 
-.content-grid {
-  display: grid;
-  grid-template-columns: 350px 1fr;
-  gap: 1rem;
-  height: 100%;
-  overflow: hidden;
-}
+.diff-add { background: #e6ffed; text-decoration: none; border-bottom: 1px solid #22863a; }
+.diff-del { background: #ffeef0; color: #cb2431; text-decoration: line-through; }
 
-.panel {
-  background: var(--panel-bg);
-  border: 1px solid var(--border-color);
-  border-radius: 8px;
+/* Progress Overlay */
+.progress-overlay {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(255,255,255,0.8);
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+}
+
+.progress-card {
+  background: white;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  width: 300px;
+  text-align: center;
+}
+
+.progress-mini-bar {
+  height: 4px;
+  background: #eee;
+  margin: 10px 0;
+  border-radius: 2px;
   overflow: hidden;
 }
 
-.panel h2 {
-  margin: 0;
-  padding: 1rem;
-  font-size: 1rem;
-  border-bottom: 1px solid var(--border-color);
-  background: #fcfcfc;
+.progress-fill {
+  height: 100%;
+  background: var(--primary-color);
+  width: 0%;
 }
 
-.list-container, .detail-container {
-  flex: 1;
-  overflow-y: auto;
-  padding: 1rem;
-}
+.hidden { display: none !important; }
 
-.empty-state, .placeholder {
-  color: #5f6368;
-  text-align: center;
-  margin-top: 2rem;
-  font-style: italic;
+/* AI Insight Styling */
+.ai-panel h4 { margin: 12px 0 4px 0; font-size: 0.8rem; color: var(--text-secondary); }
+.ai-panel p { margin: 0 0 8px 0; font-size: 0.9rem; }
+.flag-item { font-size: 0.85rem; padding: 4px 0; border-bottom: 1px solid #eee; }
+
+/* Status Bar */
+.status-bar {
+  min-height: 1.5em;
 }
 </style>
