--- a/src/Index.html
+++ b/src/Index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div id="loading-fallback" style="padding: 2rem; text-align: center; font-family: sans-serif;">
-      <h2>ReVisor</h2>
-      <p>Initializing Studio Application...</p>
+      <h2 style="color: #1a73e8;">ReVisor Studio</h2>
+      <p id="loading-status">Initializing Workspace...</p>
+      <div style="margin: 20px auto; width: 40px; height: 40px; border: 4px solid #f3f3f3; border-top: 4px solid #1a73e8; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+      <style>@keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }</style>
     </div>
     
     <div class="app-wrapper hidden" id="main-app-container">
@@ -124,7 +126,7 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/diff-match-patch@1.0.5/index.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121111/diff_match_patch.js"></script>
     <?!= include('JavaScript'); ?>
   </body>
 </html>
